# onit-office

./: DOCKER.md  Dockerfile  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: DOCKER.md  TESTING.md
src/onit_office/: __init__.py  __main__.py  cli.py  mcp_server.py  server.py
tests/: conftest.py  test_cli.py  test_excel.py  test_file_ops.py  test_powerpoint.py  test_utils.py  test_word.py
